ChangeLog for TDB
=================

==== 0.8.4

+ Experimental: filtering of quads (to support dynamic datasets and graph masking).
+ Incldue src-examples in sources shipped.  

==== 0.8.3

+ Concurrency fixes
+ Speed up reforming nodes from the on-disk representation.
+ (From ARQ) Speed up complex nested optionals.  BSBM now works on all thier dataset sizes.
+ Speed up basic processing of DateTime nodes (avoid using String.format to remake lexcial forms!) 

+ Bug fix: If the query has a dataset description, this was ignored.  
  Now if the query has a dataset description (FROM, FROM NAMED) then
  an in-memory query execution is done on the loaded files and the TDB
  dataset is ignored.

==== 0.8.2

+ TDB-backed graphs at the same location now use the shared dataset.
  This means all created modesl in a JVM shared TDB caches.
  
+ All tables now created even for just a graph or model
  (including the named graph quad tables).

+ Bug fix: asking the size of a empty graph before any other operation would make the size zero 
  for the rest of the lifetime of the in-memory graph.  No data corruption on disk.

+ Bug fix: language tags on """-strings were causing a parse error. 
      
==== 0.8.1

+ Fix bug when assembling one unnamed graph. 

==== 0.8.0

** The on-disk file format has changed : datasets must be reloaded **

+ TDBFactory now caches datatsets as they are created.  
  Opening a dataset anywhere in the same JVM will return the same dataset.
  Closing this dataset immediately releases resources and closes the dataset
  everywhere in the JVM.   
  
+ A named graph of <urn:x-arq:UnionGraph>  is the RDF merge of all named graphs in a dataset.
  This is now supported as a graph name when accessing one graph in a dataset via the
  programmtic API calls.  Update directly to the  union graph is not allowed; update of
  any named graph wil be immediately visible in the union graph.
  